src/test/ui/parser/issue-68890-2.rs
type X = (?'a) +;
//~^ ERROR `?` may only modify trait bounds, not lifetime bounds
//~| ERROR expected trait bound, not lifetime bound
